substrate/frame/support/test/tests/pallet_ui/authorize_wrong_closure_2.stderr
error[E0631]: type mismatch in closure arguments
  --> tests/pallet_ui/authorize_wrong_closure_2.rs:36:23
   |
36 |         #[pallet::authorize(|_, _: u8| -> bool { true })]
   |                             ^-----------------
   |                             |
   |                             expected due to this
   |                             found signature defined here
   |
   = note: expected closure signature `for<'a> fn(TransactionSource, &'a u32) -> _`
              found closure signature `fn(TransactionSource, u8) -> _`
note: required by a bound in `macro_inner_authorize_call_for_call1`
  --> tests/pallet_ui/authorize_wrong_closure_2.rs:36:23
   |
36 |         #[pallet::authorize(|_, _: u8| -> bool { true })]
   |                             ^ required by this bound in `macro_inner_authorize_call_for_call1`

error[E0308]: mismatched types
  --> tests/pallet_ui/authorize_wrong_closure_2.rs:40:38
   |
18 | #[frame_support::pallet]
   | ------------------------ arguments to this function are incorrect
...
40 |         pub fn call1(origin: OriginFor<T>, a: u32) -> DispatchResult {
   |                                            ^ expected `u8`, found `&u32`
   |
note: closure parameter defined here
  --> tests/pallet_ui/authorize_wrong_closure_2.rs:36:27
   |
36 |         #[pallet::authorize(|_, _: u8| -> bool { true })]
   |                                 ^^^^^

error[E0308]: mismatched types
  --> tests/pallet_ui/authorize_wrong_closure_2.rs:18:1
   |
18 | #[frame_support::pallet]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | expected `Result<(..., ...), ...>`, found `bool`
   | arguments to this enum variant are incorrect
   |
   = note: expected enum `Result<(ValidTransaction, frame_support::weights::Weight), TransactionValidityError>`
              found type `bool`
help: the type constructed contains `bool` due to the type of the argument passed
  --> tests/pallet_ui/authorize_wrong_closure_2.rs:18:1
   |
18 | #[frame_support::pallet]
   | ^^^^^^^^^^^^^^^^^^^^^^^^ this argument influences the type of `Some`
note: tuple variant defined here
  --> $RUST/core/src/option.rs
   |
   |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
   |     ^^^^
   = note: this error originates in the attribute macro `frame_support::pallet` (in Nightly builds, run with -Z macro-backtrace for more info)
